fix: fixing ProductMapper.java